--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="../../../styles/imeep/animate.min.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/z-tree/css/zTreeStyle.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/timepicki/css/timepicki.css">
+        <link rel="stylesheet" type="text/css" href="../../../scripts/libs/font-awesome-4.6.3/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/bootstrap-datepicker/css/datepicker3.css">
         <script src="../../../scripts/libs/leaflet-0.7.3/leaflet-src.js"></script>
         <script src="../../../scripts/libs/leaflet-0.7.3/plugins/wicket.js"></script>
